<resources>
    <string name="app_name">Health Assistant App</string>
    <string name="placeholder_Number">0970000000</string>
    <string name="placeholder_Name">Michael Chanda</string>
    <string name="placeholder_Index">3</string>
    <string name="delete_icon">delete icon</string>
    <string name="hello_world">Hello world</string>
    <string name="toolbar_title_placeholder">Hello world</string>
    <string name="no_contacts">No Contacts</string>
    <string name="empty_drawer_icon">Empty drawer icon</string>
    <string name="app_icon">app icon</string>
    <string name="sos_message">SOS MESSAGE</string>
    <string name="save">SAVE</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="plus_icon">plus icon</string>
    <string name="view_contacts">VIEW CONTACTS</string>
    <string name="view_icon">view icon</string>
    <string name="delete_contacts">DELETE CONTACTS</string>
    <string name="edit_sos_message">EDIT SOS MESSAGE</string>
    <string name="edit_icon">edit icon</string>
    <string name="sos">SOS</string>
    <string name="menu">MENU</string>
    <string name="sos_btn_info">IN THE EVENT OF AN EMERGENCY, PRESS THE SOS BUTTON</string>
    <string name="add_contact_info">(Please note that you can register upto 3 contacts.)</string>
    <string name="sos_meesage_info">(This message will be sent including your current location to the registered contacts when you press the SOS button)</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="height_m">HEIGHT(M) :</string>
    <string name="_000">000</string>
    <string name="height_icon">height icon</string>
    <string name="weight_kg">WEIGHT(KG) :</string>
    <string name="_0_00">0.00</string>
    <string name="weight_scale_icon">weight scale icon</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">CLEAR</string>
    <string name="bmi_info">Please take not that normal BMI is between 18.5 to 25. Anything above is overweight and anything below is underweight.</string>
    <string name="blank">-</string>
    <string name="bmi_result_prefix">YOUR BODY MASS INDEX(BMI) IS:</string>
    <string name="about">ABOUT</string>
    <string name="about_icon">about icon</string>
    <string name="sos_service">SOS SERVICE</string>
    <string name="sos_icon">sos icon</string>
    <string name="health_location">HEALTH LOCATION</string>
    <string name="maps_icon">maps icon</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="bmi_icon">bmi icon</string>
    <string name="back_arrow_button">back arrow button</string>
</resources>