<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculatorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bmi_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_arrow_button"
            android:paddingHorizontal="16dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/toolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/userHeightSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bmi_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_m"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userHeight_input"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:autofillHints="Enter your height in centimeters"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/height_icon"
            android:src="@drawable/icon_height" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userWeightSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userHeightSpace"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_kg"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userWeight_input"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:autofillHints="Enter your weight in Kg"
            android:hint="@string/_000"
            android:inputType="numberDecimal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weight_scale_icon"
            android:src="@drawable/icon_weight" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userWeightSpace"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="16dp">

        <Button
            android:id="@+id/calculateBMI_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/red"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/BMIResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_area"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/bmi_result_prefix"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/BMIResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BMIResultTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/blank"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/BMIRangeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BMIResult"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bmi_info"
        android:textAlignment="center"
        android:textColor="@color/info"
        android:textSize="14sp"
        android:textStyle="italic" />


</RelativeLayout>