<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SOSMessageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/message_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_arrow_button"
            android:paddingHorizontal="16dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/toolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/titleSOSMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/sos_message"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addContactNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/sos_meesage_info"
        android:textAlignment="center"
        android:textColor="@color/info"
        android:textSize="14sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/SOSMessageArea"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addContactNotice"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/sos_message"
        app:counterEnabled="true"
        app:counterMaxLength="200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SOSMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLength="200"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveMessage_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SOSMessageArea"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/green"
        android:paddingVertical="12dp"
        android:text="@string/save" />
</RelativeLayout>